--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Glitters Primary Project</title>
-    <link rel="stylesheet" href="/styles/style.css"
+    <link rel="stylesheet" href="/styles/style.css" />
 </head>
 <body>
     <div class="container">
@@ -20,7 +20,17 @@
             <h3>WE ARE THE BEST TEAM</h3>
         </section>
 
-        
+        <!-- THE SECTION OF THE OUR PORTFOLIO COMPONENT -->
+        <section class="portfolio-section">
+            <div class="title-header">
+                <h2 class="text-center">OUR PORTFOLIO</h2>
+                <p class="text-center">
+                    There are many variations of passages of Lorem Ipsum available There are many variations of passages of Lorem Ipsum available There are many variations of passages of Lorem Ipsum available
+                </p>
+                <div class="seperator"></div>
+            </div>
+        </section>
+
 
     </div>
 </body>
