--- a/html/index.html
+++ b/html/index.html
@@ -18,6 +18,7 @@
         <section>
             <h1>WELCOME TO THE GLITTERS TEAM</h1>
             <h3>WE ARE THE BEST TEAM</h3>
+            <p>My name is Victor Ade-Samuel amd i am proud to be a member of this team</p>
         </section>
 
         <!-- THE SECTION OF THE OUR PORTFOLIO COMPONENT -->
