Oyewale Tayo added a few text to the index page

--- a/html/index.html
+++ b/html/index.html
@@ -25,7 +25,8 @@
             <div class="title-header">
                 <h2 class="text-center">OUR PORTFOLIO</h2>
                 <p class="text-center">
-                    There are many variations of passages of Lorem Ipsum available There are many variations of passages of Lorem Ipsum available There are many variations of passages of Lorem Ipsum available
+                    This is a sample page for the Glitters team of TIIDELAB Cohort 3. 
+                    This project is aimed to test our collaborative skills and know how the git workflow works.
                 </p>
                 <div class="seperator"></div>
             </div>
