--- a/html/index.html
+++ b/html/index.html
@@ -28,7 +28,21 @@
                     There are many variations of passages of Lorem Ipsum available There are many variations of passages of Lorem Ipsum available There are many variations of passages of Lorem Ipsum available
                 </p>
                 <div class="seperator"></div>
+                <div class="flex-btn">
+                    <button class="btn"><a href="#">All Works</a></button>
+                    <button class="btn"><a href="#">Graphic Design</a></button>
+                    <button class="btn"><a href="#">Programming</a></button>
+                    <button class="btn"><a href="#">Web design</a></button>
+                    <button class="btn"><a href="#">Video Edits</a></button>
+                </div>
+
+                <div class="portfolio-gird">
+                    <div>
+                        <img src="" alt="">
+                    </div>
+                </div>
             </div>
+
         </section>
 
 
