--- a/html/index.html
+++ b/html/index.html
@@ -40,61 +40,35 @@
                 <div class="portfolio-gird">
                      <div class="flip">
                         <img src="/images/tea.jpg" alt="">
-                        <div class="overlay">
-                        <div class="text">Photographer</div>
-                        <p class="text">Photo Shop</p>
-                        </div>
                       </div> 
 
-                    
-
                     <div class="flip">
                         <img src="/images/card.jpg" alt="">
-                        <div class="overlay">
-                            <div class="text">Web Developer</div>
-                            </div> 
+                       
                     </div>
 
                     <div class="flip">
                         <img src="/images/tea.jpg" alt="">
-                        <div class="overlay">
-                            <div class="text">Online Marketing</div>
-                            </div>
                     </div>
 
                     <div class="flip">
                         <img src="/images/learn.jpg" alt="">
-                        <div class="overlay">
-                            <div class="text">Graphic Designer</div>
-                            </div>
                     </div>
 
                     <div class="flip">
                         <img src="/images/card.jpg" alt="">
-                        <div class="overlay">
-                            <div class="text">Photographer</div>
-                            </div>
                     </div>
 
                     <div class="flip">
                         <img src="/images/tea.jpg" alt="">
-                        <div class="overlay">
-                            <div class="text">Web Developer</div>
-                            </div>
                     </div>
 
                     <div class="flip">
                         <img src="/images/learn.jpg" alt="">
-                        <div class="overlay">
-                            <div class="text">Online Marketing</div>
-                            </div>
                     </div>
 
                     <div class="flip">
-                        <img src="/images/tea.jpg" alt="">
-                        <div class="overlay">
-                            <div class="text">Graphic Designer</div>
-                            </div>
+                        <img src="/images/card.jpg" alt="">
                     </div>
 
                 </div>
